[project]
name = "agentic-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.165.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.0",
]
